--- a/package.json
+++ b/package.json
@@ -8,16 +8,24 @@
     "axios": "^0.21.1",
     "cors": "^2.8.5",
     "dotenv": "10.0.0",
+    "express-fileupload": "^1.2.1",
+    "express-session": "^1.17.2",
+    "googleapis": "^85.0.0",
     "hls.js": "^1.0.10",
+    "http2": "^3.3.7",
     "mysql2": "^2.2.5",
+    "passport": "^0.4.1",
+    "passport-custom": "^1.1.1",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.6.5",
     "socket.io": "^4.2.0",
     "socket.io-client": "^4.2.0",
-    "telegraf": "^4.4.1",
+    "telegraf": "^3.38.0",
     "vue": "~2.6.12",
     "vue-resource": "^1.5.3",
     "vue-router": "^3.5.1",
-    "vuex": "~3.6.2"
+    "vuex": "~3.6.2",
+    "zadarma": "^1.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.13.10",
