--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "@coreui/vue": "^3.2.9",
     "@coreui/vue-chartjs": "^1.0.6",
     "axios": "^0.21.1",
+    "cheerio": "^1.0.0-rc.10",
     "cors": "^2.8.5",
+    "csv-parse": "^4.16.3",
     "dotenv": "10.0.0",
     "express-fileupload": "^1.2.1",
     "express-session": "^1.17.2",
     "googleapis": "^85.0.0",
     "hls.js": "^1.0.10",
     "http2": "^3.3.7",
+    "iconv": "^3.0.0",
     "mysql2": "^2.2.5",
     "passport": "^0.4.1",
     "passport-custom": "^1.1.1",
