--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vue-resource": "^1.5.3",
     "vue-router": "^3.5.1",
     "vuex": "~3.6.2",
+    "websocket": "^1.0.34",
     "zadarma": "^1.0.6"
   },
   "devDependencies": {
